--- a/index.html
+++ b/index.html
@@ -450,7 +450,122 @@
             </li>
           </ul>
         </div>
+        <div class="footer-container-item">
+          <p class="subscription-title">Subscribe</p>
+          <form>
+            <div class="sub-input-field">
+              <label for="email-input" aria-label="Footer input"></label>
+              <input
+                class="email-input"
+                id="email-input"
+                type="email"
+                placeholder="E-mail"
+              />
+              <button class="footer-submit-btn" type="submit">
+                <div class="btn-field">
+                  <span>Subscribe</span>
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-telegram"></use>
+                  </svg>
+                </div>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal-window">
+        <button type="button" class="close-btn">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="name" class="modal-label">Name</label>
+            <div class="modal-field-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                id="name"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="phone" class="modal-label">Phone</label>
+            <div class="modal-field-wrap">
+              <input
+                type="tel"
+                class="modal-input"
+                name="user-phone"
+                id="phone"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="email" class="modal-label">Email</label>
+            <div class="modal-field-wrap">
+              <input
+                type="email"
+                class="modal-input"
+                name="user-email"
+                id="email"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="comment" class="modal-label">Comment</label>
+            <div class="modal-field-wrap">
+              <textarea
+                name="user-comment"
+                id="comment"
+                class="comment-field"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <input
+              class="tick-field visually-hidden"
+              type="checkbox"
+              name="terms-tick"
+              id="terms"
+            />
+            <label for="terms" class="tick-label">
+              <span class="modal-tick-text">
+                <svg width="10" height="8">
+                  <use href="./images/icons.svg#icon-tick"></use>
+                </svg> </span
+              >I accept the terms and conditions of the<a
+                href=""
+                class="tick-label-link"
+                >Privacy Policy</a
+              >
+            </label>
+          </div>
+
+          <div class="modal-field">
+            <button class="modal-submit-btn" type="submit">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
