--- a/index.html
+++ b/index.html
@@ -452,24 +452,23 @@
         </div>
         <div class="footer-container-item">
           <p class="subscription-title">Subscribe</p>
-          <form>
-            <div class="sub-input-field">
-              <label for="email-input" aria-label="Footer input"></label>
-              <input
+          <form class="footer-form">
+            <label
+              class="footer-input-label"
+              for="email-input"
+              aria-label="Footer input"
+              ><input
                 class="email-input"
+                name="user-email"
                 id="email-input"
                 type="email"
                 placeholder="E-mail"
-              />
-              <button class="footer-submit-btn" type="submit">
-                <div class="btn-field">
-                  <span>Subscribe</span>
-                  <svg width="24" height="24">
-                    <use href="./images/icons.svg#icon-telegram"></use>
-                  </svg>
-                </div>
-              </button>
-            </div>
+            /></label>
+            <button class="footer-submit-btn" type="submit">
+              Subscribe<svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -485,13 +484,13 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
-            <label for="name" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="modal-field-wrap">
               <input
                 type="text"
                 class="modal-input"
                 name="user-name"
-                id="name"
+                id="user-name"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
@@ -500,13 +499,13 @@
           </div>
 
           <div class="modal-field">
-            <label for="phone" class="modal-label">Phone</label>
+            <label for="user-phone" class="modal-label">Phone</label>
             <div class="modal-field-wrap">
               <input
                 type="tel"
                 class="modal-input"
                 name="user-phone"
-                id="phone"
+                id="user-phone"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -515,13 +514,13 @@
           </div>
 
           <div class="modal-field">
-            <label for="email" class="modal-label">Email</label>
+            <label for="user-email" class="modal-label">Email</label>
             <div class="modal-field-wrap">
               <input
                 type="email"
                 class="modal-input"
                 name="user-email"
-                id="email"
+                id="user-email"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
@@ -530,25 +529,24 @@
           </div>
 
           <div class="modal-field">
-            <label for="comment" class="modal-label">Comment</label>
-            <div class="modal-field-wrap">
-              <textarea
-                name="user-comment"
-                id="comment"
-                class="comment-field"
-                placeholder="Text input"
-              ></textarea>
-            </div>
+            <label for="user-comment" class="modal-label">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="comment-field"
+              placeholder="Text input"
+            ></textarea>
           </div>
 
           <div class="modal-field">
             <input
               class="tick-field visually-hidden"
               type="checkbox"
-              name="terms-tick"
-              id="terms"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label for="terms" class="tick-label">
+            <label for="user-privacy" class="tick-label">
               <span class="modal-tick-text">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#icon-tick"></use>
@@ -560,10 +558,7 @@
               >
             </label>
           </div>
-
-          <div class="modal-field">
-            <button class="modal-submit-btn" type="submit">Send</button>
-          </div>
+          <button class="modal-submit-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
