--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal-window">
         <button type="button" class="close-btn">
           <svg class="close-icon" width="8" height="8">
