--- a/index.html
+++ b/index.html
@@ -548,9 +548,8 @@
             />
             <label for="user-privacy" class="tick-label">
               <span class="modal-tick-text">
-                <svg width="10" height="8">
-                  <use href="./images/icons.svg#icon-tick"></use>
-                </svg> </span
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-tick"></use></svg></span
               >I accept the terms and conditions of the<a
                 href=""
                 class="tick-label-link"
