added js, fixed issue

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <section class="sec-baner">
         <div class="container">
           <h1 class="baner-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="sec-baner-btn">Order Service</button>
+          <button data-modal-open type="button" class="sec-baner-btn">
+            Order Service
+          </button>
         </div>
       </section>
       <section class="sec-features">
@@ -474,9 +476,9 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div data-modal class="backdrop">
       <div class="modal-window">
-        <button type="button" class="close-btn">
+        <button data-modal-close type="button" class="close-btn">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -561,5 +563,6 @@
         </form>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
