--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+  </head>F
   <body>
     <header class="header-page">
       <div class="container header-container">
@@ -102,7 +102,7 @@
               </div>
               <h3 class="feature-item-title">Diligence</h3>
               <p class="text">
-                Research and confirm brands that present the strongest digital
+                Research and confirm brands with the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
